Estructura user, person

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,13 @@
 fastapi
 uvicorn
 sqlalchemy
-psycopg2-binary
-mediapipe
-opencv-python
-python-dotenv
-numpy
-pydantic[email]
-pydantic
-passlib
+passlib[bcrypt]
+python-jose[cryptography]
 python-multipart
-python-jose
-bcrypt
-cv2
-requests
+pydantic
+pydantic[email]
+face-recognition
+opencv-python
+numpy
+pillow
+pydantic-settings
